k8s/components/gridsuite/patches/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: not-important
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    # avoids duplicating the location in the generated conf for '/xxx' and '/xxx/'
    # we are using this mode anyway because we do path prefix stripping
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
